# server-manager

./: .gitignore  Cargo.toml  README.md  readme.md
src/: cfg.rs  impl.rs  lib.rs  struct.rs  test.rs
src/config/: impl.rs  mod.rs  struct.rs  type.rs
src/manager/: const.rs  constant.rs  impl.rs  mod.rs  struct.rs  type.rs
tests/: mod.rs
tests/manager/: fn.rs
