[package]
name = "server-manager"
version = "3.7.0"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """server-manager is a rust library for managing server processes. It encapsulates service startup, shutdown, and background daemon mode. Users can specify the PID file, log file paths, and other configurations through custom settings, while also passing in their own asynchronous server function for execution. The library supports both synchronous and asynchronous operations. On Unix and Windows platforms, it enables background daemon processes."""
keywords = ["manager", "processes", "libc", "linux", "unix"]
repository = "https://github.com/crates-dev/server-manager.git"
categories = ["development-tools"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github",
    "**/*.pid",
    "**/*.log"
]

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
